codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pets_unavailable_tmux_40.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 40)"
---
  Pets unavailable
  Pets are disabled in tmux. Terminal
  images don’t stay pane-local in tmux
  and can corrupt scrollback or move
  between panes. Run Zuno outside tmux
  to use pets.


› 1. Close

  enter select · esc back
